Agent step completed: Implement import and export functionality for graph structures

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,9 @@
         <button id="add-edge">Add Edge</button>
         <button id="remove-selected">Remove Selected</button>
         <button id="clear-all">Clear All</button>
+        <button id="export-graph">Export Graph</button>
+        <input type="file" id="import-graph" accept=".json">
+        <label for="import-graph">Import Graph</label>
     </div>
     <div id="projects-list"></div>
     <div id="suggested-nodes-list"></div>
