--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="main-content">
     <h1>Login</h1>
-    <form method="POST" class="login-form">
+    <form method="POST">
         <div>
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
@@ -14,9 +13,4 @@
         </div>
         <button type="submit">Login</button>
     </form>
-</div>
-<div class="sidebar">
-    <h2>Welcome</h2>
-    <p>Please log in to access the DAG Drawing App.</p>
-</div>
 {% endblock %}
