--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,34 @@
 {% extends "base.html" %}
 
+{% block title %}DAG Drawing App{% endblock %}
+
 {% block content %}
     <h1>DAG Drawing App</h1>
-    <div id="graph"></div>
-    <div class="controls">
-        <input type="text" id="project-name" placeholder="Project Name">
-        <button id="save-project">Save Project</button>
-        <input type="text" id="node-label" placeholder="Node Label">
-        <button id="add-node">Add Node</button>
-        <button id="add-edge">Add Edge</button>
-        <button id="remove-selected">Remove Selected</button>
-        <button id="clear-all">Clear All</button>
-        <button id="export-graph">Export Graph</button>
-        <input type="file" id="import-graph" accept=".json">
-        <label for="import-graph">Import Graph</label>
+    <div class="main-container">
+        <div class="graph-container">
+            <div id="graph"></div>
+            <div class="controls">
+                <input type="text" id="project-name" placeholder="Project Name">
+                <button id="save-project">Save Project</button>
+                <input type="text" id="node-label" placeholder="Node Label">
+                <button id="add-node">Add Node</button>
+                <button id="add-edge">Add Edge</button>
+                <button id="remove-selected">Remove Selected</button>
+                <button id="clear-all">Clear All</button>
+                <button id="export-graph">Export Graph</button>
+                <input type="file" id="import-graph" accept=".json">
+                <label for="import-graph">Import Graph</label>
+            </div>
+        </div>
+        <div class="sidebar">
+            <div id="suggested-nodes-list">
+                <h2>Suggested nodes</h2>
+                <!-- Suggested nodes will be dynamically added here -->
+            </div>
+            <div id="projects-list">
+                <h2>Your Projects</h2>
+                <!-- Project list will be dynamically added here -->
+            </div>
+        </div>
     </div>
-    <div id="projects-list"></div>
-    <div id="suggested-nodes-list"></div>
 {% endblock %}
