--- a/templates/login.html
+++ b/templates/login.html
@@ -1,22 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}Login{% endblock %}
-
 {% block content %}
     <h1>Login</h1>
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            <div class="notification">
-                {{ messages[0] }}
-            </div>
-        {% endif %}
-    {% endwith %}
-    <form method="POST" action="{{ url_for('login') }}">
-        <div class="form-group">
+    <form method="POST">
+        <div>
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
         </div>
-        <div class="form-group">
+        <div>
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
         </div>
