--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,12 @@
         <input type="file" id="import-graph" accept=".json">
         <label for="import-graph">Import Graph</label>
     </div>
-    <div id="projects-list"></div>
-    <div id="suggested-nodes-list"></div>
+    <div id="projects-list">
+        <h2>Your Projects</h2>
+        <!-- Projects will be dynamically added here -->
+    </div>
+    <div id="suggested-nodes-list">
+        <h3>Suggested Nodes</h3>
+        <!-- Suggested nodes will be dynamically added here -->
+    </div>
 {% endblock %}
