--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
             {% if current_user.is_authenticated %}
                 <li><a href="{{ url_for('logout') }}">Logout</a></li>
                 {% if current_user.is_admin %}
-                    <li><a href="{{ url_for('admin') }}">Admin</a></li>
+                    <li><a href="{{ url_for('admin') }}">Admin Dashboard</a></li>
                 {% endif %}
             {% else %}
                 <li><a href="{{ url_for('login') }}">Login</a></li>
