--- a/templates/admin.html
+++ b/templates/admin.html
@@ -23,6 +23,11 @@
                         <form action="{{ url_for('delete_user', user_id=user.id) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this user?');">
                             <button type="submit">Delete</button>
                         </form>
+                        {% if not user.is_admin %}
+                            <form action="{{ url_for('make_user_admin', user_id=user.id) }}" method="POST">
+                                <button type="submit">Make Admin</button>
+                            </form>
+                        {% endif %}
                     </td>
                 </tr>
             {% endfor %}
