Agent step completed: Implement option to export all projects in a single, chained JSON file

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -59,4 +59,7 @@
             {% endfor %}
         </tbody>
     </table>
+
+    <h2>Export All Projects</h2>
+    <a href="{{ url_for('export_all_projects') }}" class="button">Export All Projects as JSON</a>
 {% endblock %}
