--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
                 
                 {% if current_user.is_admin %}
                 <div id="admin-input" class="admin-controls">
-                    <input type="text" id="admin-prompt" placeholder="Enter causal link prompt">
+                    <textarea id="admin-prompt" rows="4" cols="50" placeholder="Enter causal link prompt"></textarea>
                     <button id="submit-prompt">Generate Graph</button>
                 </div>
                 {% endif %}
@@ -53,7 +53,7 @@
                 <li>To import a graph: Click "Choose File", select a JSON file, then click "Import Graph".</li>
                 <li>To add annotations: Right-click on a node and enter the annotation text.</li>
                 {% if current_user.is_admin %}
-                <li>Admin: Enter a causal link prompt and click "Generate Graph" to create a new graph based on the Elicit.org API response.</li>
+                <li>Admin: Enter a causal link prompt and click "Generate Graph" to create a new graph based on the LLM response.</li>
                 {% endif %}
             </ul>
         </div>
